Fix campaign content alignment for mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -662,6 +662,11 @@ font-size: 20px;
     }
   }
 
+  .campaign-content {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
 }
 
 
